% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/robustbase/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{robustbase}}
\encoding{UTF-8}

  % --- 1.0-0  once we fix  adjOutlyingness() properly !
  %     =====

\section{CHANGES in robustbase VERSION 0.99-4 (2024-08-19, svn 1001)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{lmrob.fit()} gets new option \code{bare.only} for some
      speed up, in case a relatively \dQuote{bare} result is sufficient.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item fix another LaTeX no more wanting math in section
      titles (same problem as 0.99-3), now for \file{lmrob_simulation.Rnw}.
      Now also use \verb{\texorpdfstring} inside \verb{\title{}} of
      \file{psi_functions.Rnw} \emph{and} use \verb{newtheorem{..}}
      \emph{after} \verb{\hypersetup{...}} (thanks to Kurt).

      \item avoid some \pkg{ggplot2} warnings (about omitting obs.)

      \item do not warn about skipping equilibration for p=1.

      \item define \code{STRICT_R_HEADERS} now (src/*.[ch]).
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-3 (2024-07-01, svn r992)}{
  \subsection{Misc}{
    \itemize{
      \item Again adapt \file{../vignettes/lmrob_simulation.Rnw} to
      \pkg{ggplot2} changes (\code{ s/ fun.y / fun / }).

      \item \file{tests/subsample.R} now shows "Matrix" info (as that gave
      confusing error during Matrix / R-devel changes).

      \item Latest LaTeX does not like math in \verb{\section{.}}; hence
      replacing \verb{\psi} by \verb{\texorpdfstring{$\psi$}{psi}}.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-2 (2024-01-27, svn r989)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item fix thinko bug introduced exact fit checking in 0.99-0; thanks
      to the report by Thomas Mang.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-1 (2023-11-28, svn r988)}{
  \subsection{Misc}{
    \itemize{