@@ -7,7 +7,15 @@
   % --- 1.0-0  once we fix  adjOutlyingness() properly !
   %     =====
 
-\section{CHANGES in robustbase VERSION 0.99-4 (2024-08-19, svn 1001)}{
+\section{CHANGES in robustbase VERSION 0.99-4 (2024-09-03, svn 1003)}{
+  \subsection{Misc}{
+    \itemize{
+      \item small changes in \file{tests/lmrob-psifns.R} and \file{*.Rout.save}.
+    }
+  }
+}
+
+\section{CHANGES in robustbase VERSION 0.99-4 (2024-08-19, svn 1002)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{lmrob.fit()} gets new option \code{bare.only} for some
